# video-extract-agents

./: .gitignore  .gitlab-ci.yml  README.md
backend/agent-orchestrator/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/agent-orchestrator/app/: agents.py  blob.py  config.py  consumer.py  crew.py  db.py  generated_asset_store.py  litellm_callbacks.py  log_sequence.py  main.py  server.py  tasks.py  utils.py
backend/agent-orchestrator/app/tools/: catalogue.py  crewai_tools.py  mcp_client.py  tool_registry.py
backend/agent-orchestrator/tests/unit/: conftest.py  test_catalogue.py  test_consumer.py  test_crew.py  test_db.py  test_mcp_client.py  test_server.py
backend/api-gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.js  jest.config.ts  package-lock.json  package.json
backend/notification-worker/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/notification-worker/app/: config.py  consumer.py  db.py  main.py  notifier.py  url_signer.py
backend/notification-worker/tests/unit/: conftest.py  test_consumer.py  test_db.py  test_notifier.py  test_url_signer.py
backend/preprocessing-worker/: .env.example  Dockerfile  pyproject.toml
backend/preprocessing-worker/app/: blob.py  config.py  consumer.py  db.py  main.py  processor.py
backend/preprocessing-worker/tests/unit/: conftest.py  test_blob.py  test_consumer.py  test_db.py  test_processor.py
docs/: ai-containers-deep-dive.md  architecture.md  azure-credentials.md  azure-production-deployment.md  build-container.md  dev-machine-tools-report.md  e2e-tests.md  getting-started.md  gitlab-pipeline.md  instant-compilation-errors.md  llm-input-repetition-analysis.md  local-containers-report.md  local-development.md  mcp-tests.md  nginx-proxy.md  plan-fix-llm-input-repetition.md  prompt-examples.md  structured-nibbling-bengio.md  terraform.md
external-agents/: .gitignore
external-agents/agent-instructions/: video-extraction-agent.md
external-agents/claude-desktop/: .env.example  README.md  docker-compose.yml
external-agents/librechat/: .env.example  README.md  docker-compose.yml  librechat.yaml
external-agents/mcp-bridge/: .env.example  Dockerfile  pyproject.toml
external-agents/mcp-bridge/app/: bridge.py  catalogue_cache.py  config.py  db.py  main.py  server.py  stdio_entry.py  upload.py  upload_ui.py
external-agents/mcp-bridge/app/prompts/: video-extraction-agent.md
external-agents/mcp-bridge/tests/unit/: test_bridge.py  test_server.py
frontend/angular-shell/: .env.example  .gitignore  Dockerfile  angular.json  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json
frontend/librechat/: .env.example  .gitignore  Dockerfile  entrypoint.sh  librechat.yaml
infrastructure/: .gitignore
infrastructure/docker-compose/: .env.example  Dockerfile.test  docker-compose.yml  servicebus-config.json
mcp-servers/mcp-server-analysis/: .env.example  .gitignore  Dockerfile  pyproject.toml
mcp-servers/mcp-server-analysis/app/: blob.py  config.py  db.py  main.py  router.py  tool_registry.py  validation.py
mcp-servers/mcp-server-analysis/app/tools/: analyze_scene.py  detect_motion.py  detect_motion_sports.py  detect_objects.py  detect_objects_vision.py  estimate_height_above_surface.py  extract_frames.py  frame_batching.py  generated_asset_store.py  ingest_video.py  model_registry.py  patch_asset.py  query_asset.py  read_asset.py  segment_utils.py  transcribe_audio.py  write_segments_asset.py
mcp-servers/mcp-server-analysis/tests/unit/: conftest.py  test_analyze_scene.py  test_detect_motion.py  test_detect_objects.py  test_detect_objects_vision.py  test_estimate_height_above_surface.py  test_extract_frames.py  test_router.py  test_transcribe_audio.py
mcp-servers/mcp-server-processing/: .env.example  Dockerfile  pyproject.toml
mcp-servers/mcp-server-processing/app/: config.py  main.py  router.py  tool_registry.py  validation.py
mcp-servers/mcp-server-processing/app/tools/: blob_helper.py  extract_clip.py  extract_clips_bulk.py  generated_asset_store.py  merge_clips.py  normalize_segments.py  query_asset.py  split_video.py  transform_video.py  write_asset.py
mcp-servers/mcp-server-processing/tests/unit/: test_extract_clip.py  test_merge_clips.py  test_router.py  test_validation.py
scripts/: bootstrap-dev.sh  bootstrap-prod.sh  check_e2e_threshold.py  collect_test_logs.py  create_service_bus_queues.py  credentials.sh.example  generate_mcp_report_pdf.py  init_db.py  init_storage.py  inspect-e2e-results.sh  repair_job_output.py  run-e2e-local.sh  run-integration-local.sh  smoke-test.sh  teardown.sh
tests/e2e/: conftest.py  helpers.py  test_analyze_scene.py  test_detect_motion.py  test_detect_motion_sports.py  test_detect_objects.py  test_detect_objects_vision.py  test_estimate_height_above_surface.py  test_followup_job.py  test_transcribe_audio.py  video_factory.py
(+102 files in other folders)
