[tool.poetry]
name = "agent-orchestrator"
version = "1.0.0"
description = "Video Extract Platform — Agent Orchestrator (CrewAI + FastAPI)"
authors = ["Video Extract Platform"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
crewai = "^0.80.0"
setuptools = ">=70.0"
litellm = "^1.50.0"
boto3 = "^1.35.0"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
azure-servicebus = "^7.12.2"
azure-storage-blob = "^12.23.0"
azure-monitor-opentelemetry = "^1.6.4"
pydantic-settings = "^2.6.0"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
