[tool.poetry]
name = "notification-worker"
version = "1.0.0"
description = "Video Extract Platform — Notification Worker (ACS email)"
authors = ["Video Extract Platform"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
asyncpg = "^0.30.0"
azure-servicebus = "^7.12.2"
azure-communication-email = "^1.0.0"
azure-monitor-opentelemetry = "^1.6.4"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
mypy = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
