[tool.poetry]
name = "mcp-server-analysis"
version = "1.0.0-beta"
description = "Video Extract Platform — MCP Analysis Tool Server (SSE)"
authors = ["Video Extract Platform"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
azure-storage-blob = "^12.23.0"
aiohttp = "^3.10.0"
azure-monitor-opentelemetry = "^1.6.4"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
httpx = "^0.27.2"
litellm = "^1.50.0"
jsonschema = "^4.23"
boto3 = "^1.35.0"
opencv-python-headless = "^4.10.0"
ultralytics = "^8.0.0"
transformers = ">=4.42.0,<5.0.0"
openai-whisper = {version = "^20231117", optional = true}

[tool.poetry.extras]
whisper = ["openai-whisper"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
