[tool.poetry]
name = "mcp-server-processing"
version = "1.0.0"
description = "Video Extract Platform — MCP Processing Tool Server (SSE)"
authors = ["Video Extract Platform"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
azure-storage-blob = "^12.23.0"
aiohttp = "^3.10.0"
azure-monitor-opentelemetry = "^1.6.4"
pydantic-settings = "^2.6.0"
httpx = "^0.27.2"
jsonpath-ng = "^1.6"
jsonschema = "^4.23"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
httpx = {extras = ["test"], version = "^0.27.2"}
mypy = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
